# mistral-vibe

./: .dockerignore  .env.example  .envrc  .gitignore  .kilocodemodes  AGENTS.md  CHANGELOG.md  CHEFCHAT_CLI_DOCUMENTATIE.md  CLAUDE.md  CONSOLE_FIX_ANALYSIS.md  CONSOLE_FIX_COMPREHENSIVE_ANALYSIS.md  CONSOLE_FIX_SUMMARY.md  CONTRIBUTING.md  Dockerfile  EXECUTIVE_SUMMARY.md  FIX_SUMMARY.md  FORK_STATUS.md  GRID_LAYOUT_TEST_RESULTS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  Implémentation Système Plugins Chat IA.md  LSP_DEBUG_REVIEW.md  MASTERPLAN.md  Need_to_  OPEN_QUESTIONS.adoc  PLAN_TOOL_PERMISSIONS_EXTENSION.md  PLUGIN_COMMANDS_README.md  PROJECT_VISION.md  PR_DESCRIPTION.md  QUALITY_CHECKLIST.md  QUESTION_TREE.adoc  README.md  REFACTORING_SUMMARY.md  REMOTE_EXECUTION.md  STATUS_UPDATES_CALL_CHAIN_SUMMARY.md  TESTING_MENU.md  VIBE.md  WINDOWS_CONSOLE_FIX_REVIEW.md  action.yml  benchmark_output.txt  (+22 more)
.chef/: palate.toml
.cursor/: UX_PLUGIN_GUIDE.md
.gemini/: COMMIT_MESSAGE.txt  INTEGRATION_GUIDE.md  RELEASE_NOTES_v1.0.0.md  implementation_plan_multimode.md
.github/: CODEOWNERS
.vibe-fresh/: config.toml  vibehistory
backend/: __init__.py  config.py  database.py  main.py  pyproject.toml
backend/models/: __init__.py  game.py  house_rules.py  moderation.py  session.py
backend/routers/: games.py  moderation.py  rules.py  sessions.py  voice.py
backend/services/: __init__.py  content_safety.py  dispute_resolver.py  game_moderator.py  game_search.py  house_rules.py  mistral_client.py  rule_normalizer.py  rule_qa.py  rulebook_ocr.py  voice_transcriber.py
(+889 files in other folders)
